# MarigoldOS

./: .gitignore  AGENTS.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: release.yml
app-core/src/: lib.rs
display/: Cargo.toml
display/src/: epd.rs  fb.rs  font.rs  lib.rs  literata_generated.rs
docs/: ARCHITECTURE.md  CONTEXT.md  CUSTOM_FONTS.md  FLASHING.md
docs/plans/: 2026-07-06-x3-support-plan.md  2026-07-09-calendulaos-rebrand-prd.md
fixtures/scenarios/: chapters-select.toml
fw/: Cargo.toml
fw/src/: catalog.rs  library_sd.rs  main.rs  reader_cache.rs  reader_cache_files.rs  reader_store.rs  sd_session.rs  upload.rs  views.rs
fw/src/tasks/: app.rs  display.rs  input.rs  mod.rs  power.rs  wifi.rs
hal-ext/src/: lib.rs  nvm.rs  spi_dma.rs
proto/: Cargo.toml
proto/src/: book.rs  cache.rs  captive.rs  epub.rs  lib.rs  storage.rs  text.rs  upload.rs  wifi_sync.rs
tools/: build-release.sh  build_font_pack.py  cargo.sh  generate_literata.py  serial_capture.py
tools/bench/: README.md  bench.py
tools/emulator/src/: main.rs
tools/preview/: Cargo.toml
tools/preview/src/: main.rs
ui/: Cargo.toml
ui/src/: app_render.rs  layout.rs  lib.rs  render.rs
web/: index.html  manifest-x3.json  manifest-x4.json
